--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "A plugin to track plant meristem cells."
 readme = "README.md"
 license = {file = "LICENSE"}
 authors = [
-  {name = "guiwitz"},
+  {name = "Guillaume Witz"},
   {email = "guillaume.witz@unibe.ch"},
 ]
 classifiers = [
@@ -29,6 +29,8 @@ dependencies = [
     "magicgui",
     "qtpy",
     "scikit-image",
+    "napari-guitils",
+    "natsort",
 ]
 
 [project.optional-dependencies]
