--- a/src/napari_meristem/napari.yaml
+++ b/src/napari_meristem/napari.yaml
@@ -15,18 +15,9 @@ contributions:
     - id: napari-meristem.write_single_image
       python_name: napari_meristem._writer:write_single_image
       title: Save image data with Meristem
-    - id: napari-meristem.make_container_widget
-      python_name: napari_meristem:ImageThreshold
-      title: Make threshold Container widget
-    - id: napari-meristem.make_magic_widget
-      python_name: napari_meristem:threshold_magic_widget
-      title: Make threshold magic widget
-    - id: napari-meristem.make_function_widget
-      python_name: napari_meristem:threshold_autogenerate_widget
-      title: Make threshold function widget
-    - id: napari-meristem.make_qwidget
-      python_name: napari_meristem:ExampleQWidget
-      title: Make example QWidget
+    - id: napari-meristem.make_meristem_widget
+      python_name: napari_meristem:MeristemWidget
+      title: Meristem QWidget
   readers:
     - command: napari-meristem.get_reader
       accepts_directories: false
@@ -39,12 +30,5 @@ contributions:
       layer_types: ['image']
       filename_extensions: ['.npy']
   widgets:
-    - command: napari-meristem.make_container_widget
-      display_name: Container Threshold
-    - command: napari-meristem.make_magic_widget
-      display_name: Magic Threshold
-    - command: napari-meristem.make_function_widget
-      autogenerate: true
-      display_name: Autogenerate Threshold
-    - command: napari-meristem.make_qwidget
-      display_name: Example QWidget
+    - command: napari-meristem.make_meristem_widget
+      display_name: Meristem QWidget
