--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,11 +26,16 @@ classifiers = [
 requires-python = ">=3.10"
 dependencies = [
     "numpy",
+    "pandas",
     "magicgui",
     "qtpy",
     "scikit-image",
     "napari-guitils",
     "natsort",
+    "multiview-stitcher",
+    "cellpose",
+    "antspyx"
+
 ]
 
 [project.optional-dependencies]
