--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,8 @@ dependencies = [
     "natsort",
     "multiview-stitcher",
     "cellpose",
-    "antspyx"
+    "antspyx",
+    "trackastra"
 
 ]
 
